Added new Pages
Eventwise Pages Were added

--- a/fonts/flaticon/font/_flaticon.scss
+++ b/fonts/flaticon/font/_flaticon.scss
@@ -1,6 +1,6 @@
     /*
     Flaticon icon font: Flaticon
-    Creation date: 07/12/2018 03:18
+    Creation date: 22/12/2018 09:55
     */
 
     @font-face {
@@ -36,16 +36,16 @@
   font-smoothing: antialiased;
     }
 
-    .flaticon-camera:before { content: "\f100"; }
-.flaticon-picture:before { content: "\f101"; }
-.flaticon-sheep:before { content: "\f102"; }
-.flaticon-frame:before { content: "\f103"; }
-.flaticon-eiffel-tower:before { content: "\f104"; }
-.flaticon-video-play:before { content: "\f105"; }
+    .flaticon-psychology:before { content: "\f100"; }
+.flaticon-discussion:before { content: "\f101"; }
+.flaticon-capitol-building:before { content: "\f102"; }
+.flaticon-lightbulb-idea:before { content: "\f103"; }
+.flaticon-chronometer:before { content: "\f104"; }
+.flaticon-team-leader:before { content: "\f105"; }
     
-    $font-Flaticon-camera: "\f100";
-    $font-Flaticon-picture: "\f101";
-    $font-Flaticon-sheep: "\f102";
-    $font-Flaticon-frame: "\f103";
-    $font-Flaticon-eiffel-tower: "\f104";
-    $font-Flaticon-video-play: "\f105";
+    $font-Flaticon-psychology: "\f100";
+    $font-Flaticon-discussion: "\f101";
+    $font-Flaticon-capitol-building: "\f102";
+    $font-Flaticon-lightbulb-idea: "\f103";
+    $font-Flaticon-chronometer: "\f104";
+    $font-Flaticon-team-leader: "\f105";
